aws/k8s/db.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: fc-hrsc-mysql
  namespace: codeflix

spec:
  replicas: 1
  serviceName: fc-hrsc-mysql-h
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      nodeSelector:
        type: ec2
      containers:
        - name: mysql
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: fc-hrsc-mysql-volume
          lifecycle:
            postStart:
              exec:
                command: [
                    "/bin/sh",
                    "-c",
                    "
                    until mysql -u root -p${MYSQL_ROOT_PASSWORD} -e 'SELECT 1' > /dev/null 2>&1; do
                    echo 'Waiting for MySQL to be ready...';
                    sleep 5;
                    done;
                    mysql -u root -p${MYSQL_ROOT_PASSWORD} -e 'CREATE SCHEMA IF NOT EXISTS catalog;CREATE SCHEMA IF NOT EXISTS keycloak;'",
                  ]
  volumeClaimTemplates:
    - metadata:
        name: fc-hrsc-mysql-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: fc-hrsc-storageclass
