aws/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: fc-hrsc-nginx
  namespace: codeflix
  labels:
    app: nginx

spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
      spec:
        containers:
          - name: nginx
            image: nginx:latest
