aws/k8s/admin-catalog-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: fc-hrsc-admincatalog
  namespace: codeflix

spec:
  selector:
    app: admin-catalog
  ports:
    - name: admin-catalog
      port: 80
      protocol: TCP
