aws/k8s/db-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: fc-hrsc-mysql-h
  namespace: codeflix

spec:
  selector:
    app: mysql
  ports:
    - port: 3306
  clusterIP: None
