aws/k8s/front-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: fc-hrsc-front-service
  namespace: codeflix

spec:
  selector:
    app: front
  type: ClusterIP
  ports:
    - name: fc-hrsc-front-service
      port: 80
      targetPort: 3000
      protocol: TCP
