aws/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-service
  namespace: codeflix
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-type: external

spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
    - name: nginx-service
      protocol: TCP
      port: 80
      targetPort: 80
