aws/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: fc-hrsc-nginx-ingress
  namespace: codeflix
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /realms/
            pathType: Prefix
            backend:
              service:
                name: fc-hrsc-keycloak
                port:
                  number: 8080
          - path: /admin/
            pathType: Prefix
            backend:
              service:
                name: fc-hrsc-keycloak
                port:
                  number: 8080
          - path: /resources/
            pathType: Prefix
            backend:
              service:
                name: fc-hrsc-keycloak
                port:
                  number: 8080
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: fc-hrsc-admincatalog
                port:
                  number: 80
